feat: 使能第三方按键库。

--- a/bsp/stm32/stm32l475-atk-pandora/.config
+++ b/bsp/stm32/stm32l475-atk-pandora/.config
@@ -305,7 +305,20 @@ CONFIG_RT_USING_PIN=y
 # CONFIG_PKG_USING_STM32_SDIO is not set
 # CONFIG_PKG_USING_ICM20608 is not set
 # CONFIG_PKG_USING_U8G2 is not set
-# CONFIG_PKG_USING_BUTTON is not set
+CONFIG_PKG_USING_BUTTON=y
+CONFIG_PKG_BUTTON_PATH="/packages/peripherals/button"
+CONFIG_SINGLE_AND_DOUBLE_TRIGGER=y
+# CONFIG_CONTINUOS_TRIGGER is not set
+CONFIG_LONG_FREE_TRIGGER=y
+CONFIG_BUTTON_DEBOUNCE_TIME=2
+CONFIG_BUTTON_CONTINUOS_CYCLE=1
+CONFIG_BUTTON_LONG_CYCLE=1
+CONFIG_BUTTON_DOUBLE_TIME=15
+CONFIG_BUTTON_LONG_TIME=50
+# CONFIG_PKG_USING_BUTTON_V101 is not set
+# CONFIG_PKG_USING_BUTTON_V100 is not set
+CONFIG_PKG_USING_BUTTON_LATEST_VERSION=y
+CONFIG_PKG_BUTTON_VER="latest"
 # CONFIG_PKG_USING_MPU6XXX is not set
 # CONFIG_PKG_USING_PCF8574 is not set
 # CONFIG_PKG_USING_SX12XX is not set
@@ -314,7 +327,6 @@ CONFIG_RT_USING_PIN=y
 # CONFIG_PKG_USING_KENDRYTE_SDK is not set
 # CONFIG_PKG_USING_INFRARED is not set
 # CONFIG_PKG_USING_ROSSERIAL is not set
-# CONFIG_PKG_USING_AT24CXX is not set
 
 #
 # miscellaneous packages
